# dpm

./: .gitignore  .travis.yml  Makefile.am  README  TODO  configure.ac
dpm/: Makefile.am
libdpm/: Makefile.am  acq.c  acq.h  alg.c  alg.h  conf.c  conf.h  db.c  db.h  dpm.c  dpm.h  dyn.c  dyn.h  init-db  inst.c  inst.h  parse.c  parse.h  pol.c  pol.h  reset-db  run-test  store-tool.c  store.c  store.h  stream.c  stream.h  t.c  test-conf.c  test-db.c  test-db.conf  test-dyn.c  test-parse.c  test-store.c  test-upgrade-gnome  test.c  testlib.c  testlib.h  tool.c  tt.c  (+6 more)
libdpm/test-data/: control.txt  lines.txt  pkg.deb  src.tar
struct-store/: Makefile.am  st-tool.c  struct-store.c  struct-store.h  test.c
